--- a/anime-blog/attack-on-titans.html
+++ b/anime-blog/attack-on-titans.html
@@ -32,10 +32,10 @@
                     </div>
                     <nav class="header__menu">
                         <ul class="header__list">
-                            <li><a href="index.html" class="header__link">Home</a></li>
+                            <li><a href="index.php" class="header__link">Home</a></li>
                             <li><a href="" class="header__link">Connect</a></li>
-                            <li><a href="signup.html" class="header__link sign-up">Sign up</a></li>
-                            <li><a href="login.html" class="header__link login">Login</a></li>
+                            <li><a href="signup.php" class="header__link sign-up">Sign up</a></li>
+                            <li><a href="login.php" class="header__link login">Login</a></li>
                         </ul>
                     </nav>
                 </div>
