--- a/anime-blog/attack-on-titans.html
+++ b/anime-blog/attack-on-titans.html
@@ -17,7 +17,8 @@
         crossorigin="anonymous">
     </script>
     <script src="slick/slick.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/slick.js"></script>
+    <script src="js/header.js"></script>
 </head>
 <body>
     <div class="wrapper">
