Updated the page attack

--- a/anime-blog/attack-on-titans.html
+++ b/anime-blog/attack-on-titans.html
@@ -18,14 +18,13 @@
     </script>
     <script src="slick/slick.min.js"></script>
     <script src="js/slick.js"></script>
-    <script src="js/header.js"></script>
 </head>
 <body>
     <div class="wrapper">
         <header class="header">
             <div class="header__container _container">
                 <div class="header__body">
-                    <a href="" class="header__logo">
+                    <a href="index.php" class="header__logo">
                         <img src="img/header/Logo.png" alt="Logo">
                     </a>
                     <div class="header__burger">
@@ -272,5 +271,6 @@
             </div>
         </footer>
     </div>
+<script src="js/header.js"></script>
 </body>
 </html>
