Is done(maybe...)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/home-page.css">
+    <link rel="stylesheet" href="css/sign-up.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="slick/slick.css">
     <link rel="stylesheet" href="slick/slick-theme.css">
@@ -34,7 +35,7 @@
                         <ul class="header__list">
                             <li><a href="index.html" class="header__link _active">Home</a></li>
                             <li><a href="" class="header__link">Connect</a></li>
-                            <li><a href="signup.html" class="header__link sign-up">Sign up</a></li>
+                            <li><a href="#" class="header__link sign-up" id="open__pop_up">Sign up</a></li>
                             <li><a href="login.html" class="header__link login">Login</a></li>
                         </ul>
                     </nav>
@@ -48,9 +49,9 @@
                         <div class="content__title">Welcome to <br> Gates</div>
                         <div class="content__text">Get the latest news on your favourite mangas, anime and <br> manhwa around the world!</div>
                         <div class="content__form form">
-                            <form action="" method="post" class="js-form" novalidate>
+                            <form action="" method="post" class="js-form2" novalidate>
                                 <button class="form__button" type="submit" name="submit">SUBSCRIBE</button>
-                                <input type="email" name="email" class="form__input js-input js-input-email" placeholder="Enter your email">
+                                <input type="email" name="email" class="form__input js-input2 js-input-email2" placeholder="Enter your email">
                                 <button class="form__ico" type="submit" name="submit"><img src="img/ico/Group 4.png" alt=""></button> 
                             </form>
                         </div>
@@ -63,6 +64,30 @@
                             <li><a href="" class="content__link">Military</a></li>
                             <li><a href="" class="content__link">Fantasy</a></li>
                         </ul>
+                    </div>
+                </div>
+            </section>
+            <section class="popup" id="pop_up">
+                <div class="popup__container">
+                    <div class="popup__body">
+                        <form action="" method="post" class="js-form1" novalidate>
+                            <div class="form2__item">
+                                <label for="" class="form__label">Name</label>
+                                <input type="text" name="name" class="form__input2 js-input1" placeholder="Enter your Name"/>
+                            </div>
+                            <div class="form2__item">
+                                <label for="" class="form__label">Email</label>
+                                <input type="email" name="email" class="form__input2 js-input1 js-input-email1" placeholder="Enter your Email" />
+                            </div>
+                            <div class="form2__item">
+                                <label for="" class="form__label password">Password</label>
+                                <input type="password" name="password" class="form__input2 js-input1 js-input-password1" placeholder="Enter your Password" />
+                            </div>
+                            <div class="form2__button">
+                                <button type="submit" name="submit" class="button__send">Sign up</button>
+                            </div>
+                        </form>
+                        <div class="close__popup" id="close__pop_up">&#10006</div>
                     </div>
                 </div>
             </section>
@@ -629,9 +654,9 @@
                         <p class="inf__par">Gates is a blog that focuses on Japanese art and anime. <br> They feature information on Otaku conventions and other <br> anime topics. Hear from famous anime filmmakers and <br> artists as well as plenty of news about the art of cartoon <br> creation in the Japanese culture.</p>
                     </div>
                     <div class="footer__form form">
-                        <form action="" method="post" class="js-form" novalidate>
+                        <form action="" method="post" class="js-form3" novalidate>
                             <button class="form__button" type="submit">SUBSCRIBE</button>
-                            <input type="email" name="email" class="form__input js-input js-input-email" placeholder="Enter your email">
+                            <input type="email" name="email" class="form__input js-input3 js-input-email3" placeholder="Enter your email">
                             <button class="form__ico" type="submit"><img src="img/ico/Group 4.png" alt=""></button> 
                         </form>
                     </div>
@@ -642,6 +667,9 @@
             </div>
         </footer>
     </div>
+    <script src="js/popup.js"></script>
 </body>
-<script src="js/formIndex.js"></script>
+<script src="js/formIndex1.js"></script>
+<script src="js/formIndex2.js"></script>
+<script src="js/formIndex3.js"></script>
 </html>
