--- a/attack-on-titans.html
+++ b/attack-on-titans.html
@@ -32,9 +32,9 @@
                     </div>
                     <nav class="header__menu">
                         <ul class="header__list">
-                            <li><a href="index.html" class="header__link">Home</a></li>
+                            <li><a href="index.html" class="header__link _active">Home</a></li>
                             <li><a href="" class="header__link">Connect</a></li>
-                            <li><a href="signup.html" class="header__link sign-up _active">Sign up</a></li>
+                            <li><a href="#" class="header__link sign-up" id="open__pop_up">Sign up</a></li>
                             <li><a href="login.html" class="header__link login">Login</a></li>
                         </ul>
                     </nav>
