--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/sign-up.css">
     <script
         src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
@@ -29,10 +30,10 @@
                     </div>
                     <nav class="header__menu">
                         <ul class="header__list">
-                            <li><a href="index.html" class="header__link">Home</a></li>
+                            <li><a href="index.html" class="header__link _active">Home</a></li>
                             <li><a href="" class="header__link">Connect</a></li>
-                            <li><a href="signup.html" class="header__link sign-up">Sign up</a></li>
-                            <li><a href="login.html" class="header__link login _active">Login</a></li>
+                            <li><a href="#" class="header__link sign-up" id="open__pop_up">Sign up</a></li>
+                            <li><a href="login.html" class="header__link login">Login</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -59,8 +60,34 @@
                     </div>
                 </div>
             </section>
+            <section class="popup" id="pop_up">
+                <div class="popup__container">
+                    <div class="popup__body">
+                        <form action="" method="post" class="js-form1" novalidate>
+                            <div class="form2__item">
+                                <label for="" class="form__label">Name</label>
+                                <input type="text" name="name" class="form__input2 js-input1" placeholder="Enter your Name"/>
+                            </div>
+                            <div class="form2__item">
+                                <label for="" class="form__label">Email</label>
+                                <input type="email" name="email" class="form__input2 js-input1 js-input-email1" placeholder="Enter your Email" />
+                            </div>
+                            <div class="form2__item">
+                                <label for="" class="form__label password">Password</label>
+                                <input type="password" name="password" class="form__input2 js-input1 js-input-password1" placeholder="Enter your Password" />
+                            </div>
+                            <div class="form2__button">
+                                <button type="submit" name="submit" class="button__send">Sign up</button>
+                            </div>
+                        </form>
+                        <div class="close__popup" id="close__pop_up">&#10006</div>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>
+    <script src="js/popup.js"></script>
 </body>
-<script src="js/form.js"></script>
+<script src="js/formIndex1.js"></script>
+<script src="js/login.js"></script>
 </html>
