Updated all filess

--- a/anime-blog/attack-on-titans.html
+++ b/anime-blog/attack-on-titans.html
@@ -17,14 +17,14 @@
         crossorigin="anonymous">
     </script>
     <script src="slick/slick.min.js"></script>
-    <script src="js/slick.js"></script>
+    <script src="js/script.js"></script>
 </head>
 <body>
     <div class="wrapper">
         <header class="header">
             <div class="header__container _container">
                 <div class="header__body">
-                    <a href="index.php" class="header__logo">
+                    <a href="index.html" class="header__logo">
                         <img src="img/header/Logo.png" alt="Logo">
                     </a>
                     <div class="header__burger">
@@ -32,10 +32,10 @@
                     </div>
                     <nav class="header__menu">
                         <ul class="header__list">
-                            <li><a href="index.php" class="header__link">Home</a></li>
+                            <li><a href="index.html" class="header__link _active">Home</a></li>
                             <li><a href="" class="header__link">Connect</a></li>
-                            <li><a href="signup.php" class="header__link sign-up">Sign up</a></li>
-                            <li><a href="login.php" class="header__link login">Login</a></li>
+                            <li><a href="#" class="header__link sign-up" id="open__pop_up">Sign up</a></li>
+                            <li><a href="login.html" class="header__link login">Login</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -271,6 +271,8 @@
             </div>
         </footer>
     </div>
-<script src="js/header.js"></script>
+    <script src="js/popup.js"></script>
 </body>
+<script src="js/header.js"></script>
+<script src="js/formIndex1.js"></script>
 </html>
