--- a/attack-on-titans.html
+++ b/attack-on-titans.html
@@ -271,5 +271,7 @@
             </div>
         </footer>
     </div>
+    <script src="js/popup.js"></script>
 </body>
+<script src="js/formIndex1.js"></script>
 </html>
