--- a/anime-blog/attack-on-titans.html
+++ b/anime-blog/attack-on-titans.html
@@ -17,6 +17,7 @@
         crossorigin="anonymous">
     </script>
     <script src="slick/slick.min.js"></script>
+    <script src="js/header.js"></script>
     <script src="js/script.js"></script>
 </head>
 <body>
@@ -66,6 +67,34 @@
                         <div class="preview__info">
                             <h3>1 million+ reads</h3>
                         </div>
+                    </div>
+                </div>
+            </section>
+            <section class="popup" id="pop_up">
+                <div class="popup__container">
+                    <div class="popup__body">
+                        <form action="" method="post" class="js-form1" novalidate>
+                            <div class="form2__item">
+                                <label for="" class="form__label">Name</label>
+                                <input type="text" name="name" class="form__input2 js-input1" placeholder="Enter your Name"/>
+                            </div>
+                            <div class="form2__item">
+                                <label for="" class="form__label">Email</label>
+                                <input type="email" name="email" class="form__input2 js-input1 js-input-email1" placeholder="Enter your Email" />
+                            </div>
+                            <div class="form2__item">
+                                <label for="" class="form__label__password">Password</label>
+                                <input type="password" name="pass" class="form__input2 js-input1 js-input-password1" placeholder="Enter your Password" />
+                            </div>
+                            <div class="form2__button1">
+                                <button type="submit" name="submit" class="button__send1">Sign up</button>
+                            </div>
+                            <div class="form2__button1_close1">
+                                <button type="submit" name="submit" class="button__send1">Sign up</button>
+                                <button class="close__pop_up" id="close__pop_up_1">Close</button>
+                            </div>
+                        </form>
+                        <div class="close__popup" id="close__pop_up">&#10006</div>
                     </div>
                 </div>
             </section>
@@ -273,6 +302,5 @@
     </div>
     <script src="js/popup.js"></script>
 </body>
-<script src="js/header.js"></script>
 <script src="js/formIndex1.js"></script>
 </html>
