--- a/anime-blog/attack-on-titans.html
+++ b/anime-blog/attack-on-titans.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/blog-detail.css">
+    <link rel="stylesheet" href="css/sign-up.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="slick/slick.css">
     <link rel="stylesheet" href="slick/slick-theme.css">
