--- a/anime-blog/attack-on-titans.html
+++ b/anime-blog/attack-on-titans.html
@@ -26,7 +26,7 @@
         <header class="header">
             <div class="header__container _container">
                 <div class="header__body">
-                    <a href="index.html" class="header__logo">
+                    <a href="index.php" class="header__logo">
                         <img src="img/header/Logo.png" alt="Logo">
                     </a>
                     <div class="header__burger">
@@ -34,10 +34,10 @@
                     </div>
                     <nav class="header__menu">
                         <ul class="header__list">
-                            <li><a href="index.html" class="header__link _active">Home</a></li>
+                            <li><a href="index.php" class="header__link">Home</a></li>
                             <li><a href="" class="header__link">Connect</a></li>
                             <li><a href="#" class="header__link sign-up" id="open__pop_up">Sign up</a></li>
-                            <li><a href="login.html" class="header__link login">Login</a></li>
+                            <li><a href="login.php" class="header__link login">Login</a></li>
                         </ul>
                     </nav>
                 </div>
